<resources>
    <string name="app_name">Chat Kotlin</string>
    <string name="Nombre_desarrollador">Proyecto Apps Bryam C</string>

    <!-- Inicio -->

    <string name="Btn_ir_logeo">Ingresar</string>

    <!-- Registro -->
    <string name="R_Et_nombre_usuario">Nombre de usuario</string>
    <string name="R_Et_email">Correo electrónico</string>
    <string name="R_Et_password">Contraseña</string>
    <string name="R_Et_r_password">Repita su contraseña</string>
    <string name="Btn_registrar">Registrar</string>

    <!-- Menu principal -->
    <string name="menu_principal">Menú principal</string>
    <string name="menu_perfil">Perfil de usuario</string>
    <string name="menu_acerca_de">Acerca de</string>
    <string name="menu_salir">Cerrar sesión</string>


    <string name="Nombre_usuario">Nombre de usuario</string>


    <string name="L_Et_email">Correo electrónico</string>
    <string name="L_Et_password">Contraseña</string>
    <string name="Txt_olvide_password">Olvidé mi contraseña</string>
    <string name="Btn_login">Ingresar</string>
    <string name="TXT_no_cuenta">¿No tienes una cuenta?</string>
    <string name="TXT_ir_registro">Registrarme</string>


    <string name="Txt_instrucciones">Ingrese su correo electrónico registrado para recibir las instrucciones para reestablecer su contraseña</string>
    <string name="Btn_enviar_correo">Enviar</string>


    <string name="Item_nombre_usuario">Nombre de usuario</string>
    <string name="Item_email_usuario">Email de usuario</string>
    <string name="Txt_ultimo_mensaje"></string>


    <string name="Et_buscar_usuario">Buscar usuario</string>

    <string name="Btn_login_google">Ingresar con Google</string>

    <!--Perfil de usuario-->
    <string name="P_n_usuario">Nombre de usuario</string>
    <string name="P_proveedor_txt">Proveedor: </string>
    <string name="P_proveedor"> -- </string>
    <string name="P_email">Email</string>
    <string name="P_nombres">Nombres</string>
    <string name="P_apellidos">Apellidos</string>
    <string name="P_profesion">Profesión</string>
    <string name="P_domicilio">Domicilio</string>
    <string name="P_edad">Edad</string>
    <string name="P_telefono">Telefono</string>
    <string name="Btn_Guardar">Guardar</string>

    <string name="Btn_verificar">No verificado</string>

    <!--CD - visualizar imagen-->
    <string name="Btn_cerrar_v">Cerrar</string>

    <!--Editar imagen perfil-->
    <string name="BtnElegirImagenDe">Elegir imagen de</string>
    <string name="BtnActualizarImagen">Actualizar imagen</string>


    <!--Cuadro de diálogo seleccionar imagen de-->
    <string name="Txt_seleccionar_imagen">Seleccionar imagen de: </string>
    <string name="Btn_abrir_galeria">Galería</string>
    <string name="Btn_abrir_camara">Cámara</string>

    <!--Chat-->
    <string name="N_usuario_chat">Nombre de usuario</string>
    <string name="Et_mensaje">Escriba un mensaje</string>

    <!--Item chat-->
    <string name="TXT_ver_mensaje">Hola, ¿Cómo estás?</string>


    <string name="default_web_client_id">AIzaSyD9xVGJmA6HvjAl1TfMyJ3FFNJ6MqviG</string>

    <!--Cd - Establecer teléfono-->
    <string name="Establecer_Telefono">Escriba su número</string>
    <string name="Btn_aceptar_Telefono">Aceptar</string>

    <!--Cd - Cuenta verificada-->
    <string name="CuentaVerificadaTXT">Cuenta verificada</string>
    <string name="BtnEntendidoVerificado">Entendido</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>